--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>Doggy</title>
-  <meta name="description" content="IE-edge">
-  <meta name="viewport" content="">
-
-  <link rel="stylesheet" href="./styles.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog App</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
-  <script src="./app.js"></script>
+    <div class="container">
+        <div class="header">
+            <h2> Whoof Whoof by Breed</h2>
+            <div id="breed"></div>
+        </div>
+        <div class="wallColor" id="pic">
+            
+        </div>
+    </div>   
+    <script src="./script.js"></script>
 </body>
 </html>
