--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             
         </div>
     </div>   
-    <script src="./script.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
